# ray-tracing-in-series

./: .clang-format  .gitignore  CMakeLists.txt  README.md  aabb.h  build.sh  bvh.h  camera.h  color.h  config.json  hittable.h  hittable_list.h  image.ppm  json_parser.cpp  json_parser.h  main  main.cpp  material.h  moving_sphere.h  perlin.h  ray.h  rtweekend.h  scene.cpp  scene.h  sphere.h  test.json  texture.h  vec3.h
camera/: camera.h
common/: color.h  vec3.h
cpp/: .clang-tidy  CMakeLists.txt  README.md  build_test.sh  main.cpp
cpp/ray_tracer/common/: color.h  common.h  vec3.h
cpp/ray_tracer/object/core/: aabb.h
cpp/ray_tracer/object/material/: material.h
cpp/ray_tracer/object/primitives/: primitives.h
cpp/ray_tracer/object/volumes/: constant_medium.h  volumes.h
cpp/ray_tracer/utils/: json_parser.h  utils.h
object/: object.h
object/core/: bvh.h  core.h  hittable_list.h
object/material/: material.h  perlin.h  texture.h
object/primitives/: moving_sphere.h
one_weekend/: build.sh  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  main  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
ray_tracer/: scene.cpp  scene.h
ray_tracer/camera/: camera.h
ray_tracer/common/: color.h  ray.h  vec3.h
ray_tracer/object/core/: aabb.h  aarect.h  bvh.h  hittable.h  hittable_list.h
ray_tracer/object/material/: material.h  perlin.h  texture.h
ray_tracer/object/primitives/: box.h  moving_sphere.h  sphere.h
ray_tracer/utils/: json_parser.cpp  json_parser.h  rtw_stb_image.h
rust/: image_10.ppm  image_12.ppm  image_13.ppm  image_14.ppm  image_16.ppm  image_17.ppm  image_18.ppm  image_19.ppm  image_20.ppm  image_21.ppm  image_22.ppm  image_4.ppm  image_6.ppm  image_7.ppm  image_8.ppm  image_9.ppm  image_multithread.ppm
rust/src/: camera.rs  color.rs  geometry.rs  main.rs  material.rs  point.rs  ray.rs  util.rs  vec3.rs
tests/utils/: json_parser_test.cpp
utils/: rtw_stb_image.h  utils.h
(+3 files in other folders)
